--- a/public/styles.css
+++ b/public/styles.css
@@ -158,7 +158,7 @@ button {
     border-color: #7c3aed; 
 }
 
-/* Estilos para el modo oscuro */
+
 .dark .custom-textarea {
     background-color: #e5e7eb; 
     border-color: #e5e7eb; 
@@ -181,7 +181,7 @@ button {
     border-color: #3b82f6; 
 }
 
-/* Estilos para el modo oscuro */
+
 .dark .custom-textarea-2 {
     background-color: #e5e7eb; 
     border-color: #e5e7eb; 
@@ -214,7 +214,7 @@ button {
     text-align: center; 
     cursor: pointer; 
     transition: background 0.3s; 
-    box-shadow: 0 10px 15px -3px rgba(98, 34, 132, 0.5), 0 4px 6px -2px rgba(98, 34, 132, 0.5); /* shadow-lg shadow-purple-500/50 */
+    box-shadow: 0 10px 15px -3px rgba(98, 34, 132, 0.5), 0 4px 6px -2px rgba(98, 34, 132, 0.5); 
 }
 
 .custom-button-format:hover {
@@ -229,7 +229,7 @@ button {
 
 
 .custom-button-format:focus {
-    outline: none; /* focus:outline-none */
+    outline: none; 
     box-shadow: 0 0 0 4px rgba(98, 34, 132, 0.5); 
     border-color: #9333ea;
 }
